plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.6'
    id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'BE'

ext['spring-security.version'] = '6.5.9'
ext['tomcat.version'] = '10.1.53'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

ext {
    set('springAiVersion', "1.1.8-SNAPSHOT")
}



dependencies {
    def springBootBom = platform("org.springframework.boot:spring-boot-dependencies:3.4.6")
    def springAiBom = platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")
    
    implementation springBootBom
    developmentOnly springBootBom
    annotationProcessor springBootBom
    testImplementation springBootBom

    implementation springAiBom
    testImplementation springAiBom

    // Selenium removed

    // Spring AI & MCP
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // Required for SSE MCP Client

    // Spring Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'

    // Security test
    testImplementation 'org.springframework.security:spring-security-test'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.testcontainers:mysql:1.19.0'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.0'
    testImplementation 'org.junit.platform:junit-platform-suite'
    testRuntimeOnly 'org.junit.platform:junit-platform-suite-engine'
    testImplementation 'org.junit.platform:junit-platform-launcher'
}
test {
    useJUnitPlatform()
}

jacoco {
    toolVersion = "0.8.11"
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport

    testLogging {
        events "passed", "skipped", "failed"
        showExceptions true
        exceptionFormat "full"
        showCauses true
        showStackTraces true
        showStandardStreams false
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacocoHtml')
    }
}

// bootRun forks its own JVM, so JAVA_OPTS (used only by the production
// entrypoint) does not reach it. In Docker the container memory limit has to be
// split between the Gradle daemons and this JVM, so the heap is set explicitly
// via BOOT_RUN_JVM_ARGS from docker/.env. Empty outside Docker -> IDE/local runs
// keep the JVM defaults.
tasks.named('bootRun') {
    def extraJvmArgs = System.getenv('BOOT_RUN_JVM_ARGS')
    if (extraJvmArgs) {
        jvmArgs = extraJvmArgs.tokenize(' ')
    }
}

bootJar {
    archiveBaseName = 'app'
    archiveVersion = ''
    archiveFileName = 'app.jar'
}

jar {
    enabled = false
}
